--- a/style.css
+++ b/style.css
@@ -15,6 +15,23 @@
     margin-left: 20px;
 }
 
+.searchbtn{
+    height: 40px;
+    width: 250px;
+    text-align: center;
+    background-color: rgb(0, 140, 255);
+    color: white;
+    font-weight: 700;
+    border: none;
+    outline: none;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.searchbtn:hover{
+    background: none;
+    transition: 0.5s;
+}
+
 .black{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 700;
